TODO: write_log_from_diff案を追加

--- a/TODO
+++ b/TODO
@@ -9,3 +9,12 @@ NEW
       - DBのテーブルを変更する必要がある．
  * 排他制御
       - 複数Railsを起動しなければ問題なし．
+
+ *GsEngine#write_log_from_diff
+    アクションログを元にログを書く．
+    不足している情報:
+      アクションに関わったアクター
+      アイテム毎に，見られる範囲を指定する
+        :public    => 全アクターに変更が伝わる
+        :protected => アクションに関わったアクターに変更が伝わる
+        :private   => そのアクターにのみ変更が伝わる
